kubernetes/base/deployment.yaml
# This file was automatically generated by weform 0.53.0. Please edit it
# to your liking.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-expiry-manager
spec:
  selector:
    matchLabels:
      app: product-expiry-manager
  replicas: 2
  template:
    metadata:
      labels:
        app: product-expiry-manager
        service: product-expiry-manager
    spec:
      containers:
      - name: product-expiry-manager
        image: 747772944961.dkr.ecr.eu-west-1.amazonaws.com/wt-plat-euwest1-container-registry-product-expiry-manager:__IMAGE_VERSION__
        command: ["/bin/sh"]
        args: ["-c", "set -a; . /etc/product-expiry-manager/secrets.env; set +a; bundle exec puma -b tcp://0.0.0.0 -p 3000"]
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /etc/product-expiry-manager
          name: secretsdir
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: secretsdir
        emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-expiry-manager-notifier
spec:
  selector:
    matchLabels:
      app: product-expiry-manager-notifier
  replicas: 2
  template:
    metadata:
      labels:
        app: product-expiry-manager-notifier
        service: product-expiry-manager-notifier
    spec:
      containers:
        - name: product-expiry-manager-notifier
          image: 747772944961.dkr.ecr.eu-west-1.amazonaws.com/wt-plat-euwest1-container-registry-product-expiry-manager:__IMAGE_VERSION__
          command: ["/bin/sh"]
          args: ["-c", "set -a; . /etc/product-expiry-manager/secrets.env; set +a; bundle exec sidekiq"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /etc/product-expiry-manager
              name: secretsdir
      volumes:
        - name: secretsdir
          emptyDir: {}
