kubernetes/base/service.yaml
# This file was automatically generated by weform 0.53.0. Please edit it
# to your liking.

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-expiry-manager
    service: product-expiry-manager
  name: product-expiry-manager
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: product-expiry-manager
